# Lab-12

./: .gitignore  Dockerfile  PROMPTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ai-pr-summary.yml  ci.yml
docs/: CODE_REVIEW.md  TEST_PROMPTS_AND_COVERAGE.md
scripts/: pr_ai_comment.py
src/taskboard/: __init__.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
src/taskboard/routers/: admin.py  analytics.py  auth.py  boards.py  cards.py  comments.py  lists.py
tests/: conftest.py  test_analytics_extra.py  test_api.py  test_coverage_extra.py  test_edges.py  test_health.py  test_schemas.py  test_security.py
